@@ -29,6 +29,7 @@ import org.apache.hadoop.hbase.util.Bytes;
 import org.kiji.annotations.ApiAudience;
 import org.kiji.schema.avro.RowKeyEncoding;
 import org.kiji.schema.avro.RowKeyFormat;
+import org.kiji.schema.util.ByteArrayFormatter;
 import org.kiji.schema.util.Hasher;
 
 /** Implements the hashed row key format. */
@@ -134,5 +135,15 @@ final class HashedEntityId extends EntityId {
         .add("kiji", (mKijiRowKey == null) ? "<unknown>" : Bytes.toStringBinary(mKijiRowKey))
         .add("hbase", Bytes.toStringBinary(mHBaseRowKey))
         .toString();
+  }
+
+  /** {@inheritDoc} */
+  @Override
+  public String toShellString() {
+    if (mKijiRowKey != null) {
+      return String.format("kiji=%s", Bytes.toStringBinary(mKijiRowKey));
+    } else {
+      return String.format("hbase=hex:%s", ByteArrayFormatter.toHex(mHBaseRowKey));
+    }
   }
 }
