@@ -1,0 +1,44 @@
+/**
+ * (c) Copyright 2013 WibiData, Inc.
+ *
+ * See the NOTICE file distributed with this work for additional
+ * information regarding copyright ownership.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+{
+  name : "table",
+  keys_format : {
+    encoding : "HASH_PREFIX",
+    hash_type : "MD5",
+    hash_size : 2
+  },
+  locality_groups : [ {
+    name : "default",
+    in_memory : false,
+    max_versions : 3,
+    ttl_seconds : 2147483647,
+    compression_type : "GZ",
+    families : [ {
+      name : "family",
+      columns : [ {
+        name : "column",
+        column_schema : {
+          type : "INLINE",
+          value : '"string"'
+        }
+      } ]
+    } ]
+  } ],
+  version : "layout-1.1.0"
+}
